Q13/assets/namepsace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: backend
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: frontend
spec: {}
status: {}
